# gallery-desktop

./: Cargo.toml
src/: file_container.rs  main.rs  renderer.rs  selector.rs  state.rs  viewer.rs
