[package]
name = "gallery-desktop"
edition = "2024"

[dependencies]
gl = "0.14.0"
glutin = { version = "0.32.3", default-features = false, features = [ "wayland" ] }
glutin-winit = { version = "0.5.0", default-features = false, features = [ "egl", "wayland" ] }
raw-window-handle = "0.6.2"
skia-safe = { version = "0.87.0", default-features = false, features = [ "binary-cache", "gl", "gpu", "webp-decode" ] }
winit = { version = "0.30.11", default-features = false, features = [
  "rwh_06",
  "wayland",
  "wayland-csd-adwaita-notitle",
  "wayland-dlopen",
] }
